# transcriber

./: .gitignore  README.md  pyproject.toml
notebook/summarize/: summarize.ipynb
notebook/whisper/: batch.ipynb  sample.ipynb
prompts/summarizer/: summarize.md
src/transcriber/data/: utils.py
