[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "transcriber", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "^20231117"
pydub = "^0.25.1"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"
torch = "^2.1.2"
llama-cpp-python = "^0.2.28"
langchain = "^0.1.0"
openai = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
